added python projects list

--- a/index.html
+++ b/index.html
@@ -30,22 +30,23 @@
 						<header class="major">
 							<h2>about me</h2>
 						</header>
-						<p>I am a third year student pursuing a Bachelor of Science in Integrated Information Technology, with minors in Japanese and International Studies. I have both internship and class experience using SQL, Excel, and project leadership. I am working on developing a portfolio of data projects using Python and Tableau. <br>I have been self-studying Japanese for several years, and recently passed the N2 level of the Japanese Language Proficiency Test.</p>
+						<p>I am a third year student pursuing a Bachelor of Science in Integrated Information Technology with minors in Japanese and International Studies. I have both internship and class experience using SQL and the MS Office Suite. I am learning Python and Tableau in my free time, and am developing a portfolio of data and coding-related projects. <br>I have been self-studying Japanese for several years, and recently passed the N2 level of the Japanese Language Proficiency Test.</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 						</ul>
 					</section>
 
 				<!-- Projects -->
-					<!--
+					
 					<section id="two">
 						<h2>recent projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="images/fulls/python-logo-full.png" class="image fit thumb"><img src="images/thumbs/python-logo-thumb.png" alt="python logo" /></a>
+								<h3>Python Learning Projects</h3>
+								<p>This is a list of repositories containing projects I have made while learning Python.</p>
 							</article>
+					<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
@@ -75,8 +76,9 @@
 						<ul class="actions">
 							<li><a href="#" class="button">Full Portfolio</a></li>
 						</ul>
-					</section>
 					-->
+					</section>
+					
 
 				<!-- Three -->
 					<section id="three">
