--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>recent projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/python-logo-full.png" class="image fit thumb"><img src="images/thumbs/python-logo-thumb.png" alt="python logo" /></a>
+								<a href="https://github.com/stars/hannah-nychele-gardner/lists/python-learning-projects" class="image fit thumb"><img src="images/thumbs/python-logo-thumb.png" alt="python logo" /></a>
 								<h3>Python Learning Projects</h3>
 								<p>This is a list of repositories containing projects I have made while learning Python.</p>
 							</article>
