Updated to include GitHub lists.

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>about me</h2>
 						</header>
-						<p>I am a third year student pursuing a Bachelor of Science in Integrated Information Technology with minors in Japanese and International Studies. I have both internship and class experience using SQL and the MS Office Suite. I am learning Python and Tableau in my free time, and am developing a portfolio of data and coding-related projects. <br>I have been self-studying Japanese for several years, and recently passed the N2 level of the Japanese Language Proficiency Test.</p>
+						<p>I am a third year student pursuing a Bachelor of Science in Integrated Information Technology with minors in Japanese and International Studies. <br><br>I have both internship and class experience using SQL and the MS Office Suite. I am learning Python and Tableau in my free time, and am developing a portfolio of data and coding-related projects. <br><br>I have been self-studying Japanese for several years, and passed the N2 level of the Japanese Language Proficiency Test in December 2021.</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 						</ul>
@@ -42,16 +42,16 @@
 						<h2>recent projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/stars/hannah-nychele-gardner/lists/python-learning-projects" class="image fit thumb"><img src="images/thumbs/python-logo-thumb.png" alt="python logo" /></a>
-								<h3>Python Learning Projects</h3>
-								<p>This is a list of repositories containing projects I have made while learning Python.</p>
+								<a href="https://github.com/stars/hannah-nychele-gardner/lists/data-projects" target="_blank"><img src="images/thumbs/data-thumb.png" alt="python logo"></a>
+								<h3><a href="https://github.com/stars/hannah-nychele-gardner/lists/data-projects" target="_blank">Data Projects</a></h3>
+								<p>This is a list of repositories containing data projects.</p>
 							</article>
-					<!--
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
-								<h3>Ultricies lacinia interdum</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
+								<a href="https://github.com/stars/hannah-nychele-gardner/lists/python-learning-projects" target="_blank"><img src="images/thumbs/python-logo-thumb.png" alt="python logo"></a>
+								<h3><a href="https://github.com/stars/hannah-nychele-gardner/lists/python-learning-projects" target="_blank">Python Projects</a></h3>
+								<p>This is a list of repositories containing projects made while learning Python.</p>
 							</article>
+				<!--
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
