--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						<h2>recent projects</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="https://github.com/stars/hannah-nychele-gardner/lists/data-projects" target="_blank"><img src="images/thumbs/data-thumb.png" alt="python logo"></a>
+								<a href="https://github.com/stars/hannah-nychele-gardner/lists/data-projects" target="_blank"><img src="images/thumbs/data-thumb.png" alt="data image"></a>
 								<h3><a href="https://github.com/stars/hannah-nychele-gardner/lists/data-projects" target="_blank">Data Projects</a></h3>
 								<p>This is a list of repositories containing data projects.</p>
 							</article>
