--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>about me</h2>
 						</header>
-						<p>I am a third year student pursuing a Bachelor of Science in Integrated Information Technology with minors in Japanese and International Studies. <br><br>I have both internship and class experience using SQL and the MS Office Suite. I am learning Python and Tableau in my free time, and am developing a portfolio of data and coding-related projects. <br><br>I have been self-studying Japanese for several years, and passed the N2 level of the Japanese Language Proficiency Test in December 2021.</p>
+						<p>I am pursuing a Bachelor of Science in Integrated Information Technology with minors in Japanese and International Studies. <br><br>I have both internship and class experience using SQL and the MS Office Suite. I am learning Python and Tableau in my free time, and am developing a portfolio of data and coding-related projects. <br><br>I have been self-studying Japanese for several years, and passed the N2 level of the Japanese Language Proficiency Test in December 2021.</p>
 						<ul class="actions">
 							<!-- <li><a href="#" class="button">Learn More</a></li> -->
 						</ul>
